# import_shipment_poc

./: .importlinter.ini  README.md  ca_layout.sh  main.py  manage.py  pyproject.toml
import_service_poc/: settings.py  urls.py
import_service_poc/import_service_poc/: asgi.py  settings.py  urls.py  wsgi.py
import_service_poc/import_shipment/: apps.py  views.py
import_service_poc/import_shipment/adapters/: FastProXmlV1Adapter.py
import_shipment/: admin.py  models.py  tests.py  views.py
import_shipment/adapters/: AuditMblAdapter.py  EdiAdapter.py  FakeMblAdapter.py  FakePayloadInterpreter.py  FakeTradePartnerAdapter.py  FastProXmlV1Adapter.py  GoFreightAdapter.py  SlowProJsonV1Adapter.py  SqlLiteAdapter.py
import_shipment/biz/: Presenter.py
import_shipment/controllers/: ImportShipmentController.py
import_shipment/entities/: Mbl.py  UploadRecord.py
import_shipment/factories/: ImportShipmentUsecaseFactory.py  MblGatewayFactory.py  PayloadInterpreterFactory.py
import_shipment/migrations/: 0001_initial.py
import_shipment/presenters/: As2Presenter.py  FakePresenter.py  FtpUpdater.py
import_shipment/protocols/: AS2Decoder.py  FtpReader.py
import_shipment/use_cases/: ImportShipment.py  ImportShipmentCustForSuperPro.py  TradePartnerMapper.py  UseCases.py
shipment/: apps.py  tests.py
shipment/adapters/: FakeAdapter.py
shipment/biz/entities/: Shipment.py
shipment/entities/: Container.py  InvoiceBalance.py  Shipment.py
shipment/presenters/: FakePresenter.py
shipment/use_cases/: CreateShipment.py  GetMyShipmentSummaries.py
shipment_view/: apps.py
(+54 files in other folders)
