[tool.poetry]
name = "my-poc"
version = "0.1.0"
description = "a poc for import shipment service"
authors = ["Tzu-Hui Yeh <tzu-hui.yeh@gofreight.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "import_service_poc"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django4-background-tasks = "^1.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
